--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "chalk": "^3.0.0",
     "fs-extra": "^8.1.0",
     "jszip": "^3.2.2",
-    "papaparse": "^5.1.0",
+    "node-html-parser": "^1.2.21",
+    "papaparse": "^5.3.0",
     "ts-node": "^8.5.2",
     "tslint": "^5.20.1",
     "typescript": "^3.7.2",
-    "yargs": "^15.0.1"
+    "yargs": "^16.0.3"
   },
   "devDependencies": {
     "@types/fs-extra": "^8.0.1",
